# digisto-pos

./: .gitignore  .gitmodules  CMakeLists.txt  CQtDeployer.json  README.md  bundler.bat  resources.qrc
cmake/: add-mantis.cmake
configs/: app-config.json  permissions-templ.json
pb/hooks/: checkout.pb.js  dashboard.pb.js  main.pb.js  organization.pb.js  supply.pb.js  utils.js
pb/migrations/: admin.pb.js
setup/: inno-setup-windows.iss
src/: config.hpp.in  dscontroller.cpp  dscontroller.h  globals.h  localserver.cpp  localserver.h  main.cpp  mantisintegration.cpp  mantisintegration.h  permissionmanager.cpp  permissionmanager.h  qaesencryption.cpp  qaesencryption.h  requests.cpp  requests.h  singleinstanceguard.cpp  singleinstanceguard.h
src/mb/: CMakeLists.txt  checkout.cpp  dashboard.cpp  mantisbaseimpl.cpp  mantisbaseimpl.h  organization.cpp  supply.cpp
ui/: Main.qml
ui/chartjs/: Chart.js  Chart.qml  README.md
ui/controls/: DsAccountInfoDelegateComboItem.qml  DsAccountInfoDelegateLabelItem.qml  DsBusyIndicator.qml  DsBusyOrEmptyOrAccessDeniedTableItem.qml  DsButton.qml  DsCard.qml  DsChartCard.qml  DsCharts.qml  DsCheckBox.qml  DsCheckoutPaymentMethod.qml  DsComboBox.qml  DsComboInputWithLabel.qml  DsDashboardPillSelector.qml  DsDashboardPillValue.qml  DsDashboardQuickLinks.qml  DsDashboardQuickLinksDelegate.qml  DsDateRangeSelector.qml  DsDrawer.qml  DsFormTextElement.qml  DsIcon.qml  DsIconButton.qml  DsImage.qml  DsInputCreditee.qml  DsInputMobileNumber.qml  DsInputSelector.qml  DsInputSelectorWithSearch.qml  DsInputWithLabel.qml  DsInputWithPreview.qml  DsLabel.qml  DsMenu.qml  DsMouseArea.qml  DsNavigationStack.qml  DsPage.qml  DsPopup.qml  DsRightDrawer.qml  DsSearchInput.qml  DsSearchInputNoPopup.qml  DsSettingsCard.qml  DsSettingsRowLabel.qml  DsSettingsRowTextInput.qml  (+12 more)
ui/flow/: AppStackLayout.qml  DsFlowLoader.qml  (+3 more)
(+42 files in other folders)
